# 5.py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml  docker-publish.yml  pages.yml  render-deploy.yml
app/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py  tool_catalog.py  web_quality.py
app/execution/: __init__.py  assertions.py  http_runner.py  web_runner.py
app/static/: app.js  index.html  styles.css
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application.yml
backend/src/test/resources/: application.yml
docs/: index.html
docs/assets/: app.js  java-pages.css  java-pages.js  styles.css
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/api/: http.js  platform.js
frontend/src/components/: AppShell.vue  ReportContent.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/styles/: base.css
frontend/src/views/: AiCaseGeneratorView.vue  AiDocumentView.vue  AiManageView.vue  AiResultView.vue  DashboardView.vue  DraftCasesView.vue  ExecutionsView.vue  LoginView.vue  OtherAiConfigView.vue  OtherLogCenterView.vue  OtherReportCenterView.vue  PublishedCasesView.vue  SystemManageView.vue
frontend/tests/: store.spec.js
java-platform/: pom.xml
java-platform/src/main/resources/: application.yml
tests/: conftest.py  test_api.py  test_assertions.py  test_web_quality.py
(+128 files in other folders)
