[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autotest-platform"
version = "0.1.0"
description = "A full-stack automation testing platform built with FastAPI and SQLite."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4,<4.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.38,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]
webtest = [
  "locust>=2.32.8,<3.0.0",
  "playwright>=1.55.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
norecursedirs = [".generated-tests", "generated"]

[tool.setuptools]
packages = ["app", "app.execution"]
